# yourtarget

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
blog/: admin.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_category.py  0002_rename_blogpsot_blogpost.py  0003_alter_categories_options_and_more.py  0003_blogpost_image.py  0004_blogpost_category.py  0005_alter_categoriespost_name.py  0006_alter_categoriespost_name.py  0007_subscriber.py  0008_services.py  0009_rename_categoriespost_categories.py  0010_services_slug.py
blog/templates/: cta.html  post-layout-2.html  post-list.html  post_categories.html
config/: celery.py  settings.py  urls.py
nginx/: Dockerfile  nginx.conf
users/: admin.py  models.py
users/fixtures/: admin.json
users/management/commands/: createadmin.py  deleteadmin.py
users/migrations/: 0001_initial.py
yourtarget/: api.py  apps.py  middleware.py  models.py  serializers.py  services.py  urls.py  views.py
yourtarget/migrations/: 0001_initial.py
yourtarget/templates/: 404.html  about.html  contact.html  google-maps.html  index.html  post_search.html  seo.html  web-dev.html
yourtarget/templates/includes/: base.html  footer.html  header.html
