[project]
name = "yourtargetai"
version = "0.1.0"
description = ""
authors = [
    {name = "Valdemar",email = "vovateslenko.1996.28@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "openai (>=1.82.0,<2.0.0)",
    "slugify (>=0.0.1,<0.0.2)",
    "django-ckeditor (>=6.7.3,<7.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "django-debug-toolbar (>=5.2.0,<6.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "eventlet (>=0.40.1,<0.41.0)",
    "django-celery-beat (>=2.8.1,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
